Revert "initial MURSD Push"
This reverts commit 1e764aa4df6b688c185432bb69f6d06a75035f03.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "mursdcalendartoical",
+  "name": "neucalendartoical",
   "version": "1.0.0",
-  "description": "Mendon-Upton Regional School District (massachusetts) calendars should be ICal format or have ICal option. PDF is not useful to the tech savvy.",
+  "description": "Northeastern University's calendars should be ICal format or have ICal option. PDF is not useful to the tech savvy.",
   "scripts": {
     "ConvertToICal": "node ./main.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lpage30/MURSDCalendarToICal.git"
+    "url": "git+https://github.com/lpage30/NEUCalendarToICal.git"
   },
   "keywords": [
-    "MURSD",
+    "Northeastern",
     "Calendar",
     "PDF",
     "ICal"
@@ -18,15 +18,15 @@
   "author": "Lawrence.Page@live.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lpage30/MURSDCalendarToICal/issues"
+    "url": "https://github.com/lpage30/NEUCalendarToICal/issues"
   },
-  "homepage": "https://github.com/lpage30/MURSDCalendarToICal#readme",
+  "homepage": "https://github.com/lpage30/NEUCalendarToICal#readme",
   "dependencies": {
     "command-line-args": "^5.1.1",
     "command-line-usage": "^5.0.5",
     "ical-generator": "^1.7.1",
     "node-fetch": "^2.6.0",
-    "pdf2html": "^2.5.2",
+    "pdf2html": "^2.4.0",
     "uuid": "^3.3.3"
   }
 }
